--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.119.1",
     "psycopg2>=2.9.11",
+    "psycopg2-binary>=2.9.11",
     "pydantic-settings>=2.11.0",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
